@@ -1,3 +1,9 @@
+2003-12-22  Mark Mitchell  <mark@codesourcery.com>
+
+	PR c++/12397
+	* typeck.c (finish_class_member_access_expr): Don't tree
+	IDENTIFIER_NODEs as non-dependent expressions.
+
 2003-12-22  Andrew Pinski  <pinskia@physics.uc.edu>
 
 	PR c++/5050
